--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,18 +62,18 @@ build_steps: &build_steps
           # source awsenvconf
           # ./buildproperties.sh -e $BUILD_ENV -k onlinereviewapp
           ant clean dist
-    # - run:
-    #     name: Build Pacakge
-    #     command: ./build-package.sh $APPNAME            
-    # - run:
-    #     name: "Deployment OR app and direct web"
-    #     command: |
-    #       source awsenvconf
+    - run:
+        name: Build Pacakge
+        command: ./build-package.sh $APPNAME            
+    - run:
+        name: "Deployment OR app and direct web"
+        command: |
+          source awsenvconf
     #       ./buildenv.sh -e $DEPLOY_ENV -b ${APPNAME}-deployvar
     #       source buildenvvar
     #       source apppackagever          
     #       echo "executing deploy"
-    #       ./deploy.sh $BUILD_ENV $ORAPPVER $APPNAME
+    #       ./deploy.sh $BUILD_ENV $APAPPVER $APPNAME
 
 
 jobs:
